# ai-detectability-research

./: .gitignore  CLAUDE.md  PLAN.md  YOUTUBE.md  slides.md
code/: INSTRUCTIONS.md  pyproject.toml
code/configs/: conditions.yaml  style_rules.yaml  validators.yaml
code/configs/projects/: crewai.yaml  duckdb.yaml  langchain.yaml
code/data/human_baselines/crewai/: task_001_getting_started.md  task_002_agents.md  task_003_tasks_workflows.md  task_004_tools.md  task_006_memory.md  task_007_project_structure.md  task_008_multi_agent.md
code/data/human_baselines/duckdb/: encryption_in_duckdb.md  task_001_getting_started_python.md  task_002_csv_parquet.md  task_003_community_extensions.md  task_004_query_performance.md  task_005_pandas_arrow.md  task_006_remote_storage.md  task_007_window_functions.md
code/data/human_baselines/langchain/: task_001_getting_started.md  task_002_rag_retrieval.md  task_003_agents_tools.md  task_004_prompt_output_parsers.md  task_005_memory_system.md  task_006_streaming_callbacks.md  task_007_lcel.md
code/data/results/detection/: detection.csv  detection_results.jsonl  detection_template.csv
code/data/tasks/crewai/: task_001.yaml  (+7 more)
code/notebooks/: experiment.ipynb
code/notebooks/.ipynb_checkpoints/: experiment-checkpoint.ipynb
code/scripts/: fetch_github.py  fetch_hn.py  fetch_reddit.py
code/src/ai_text_quality/: __init__.py  config.py  detect.py  factcheck.py  generate.py  io_utils.py  linguistic.py  models.py  paths.py
code/tests/: conftest.py  test_detect.py  test_factcheck.py  test_generate.py  test_linguistic.py
(+621 files in other folders)
